tests/neg-custom-args/captures/capt-depfun.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt-depfun.scala:11:43 ----------------------------------
11 |  val dc: ((Str^{y, z}) => Str^{y, z}) = ac(g()) // error
   |                                         ^^^^^^^
   |                                         Found:    Str^{} ->{ac, y, z} Str^{y, z}
   |                                         Required: Str^{y, z} => Str^{y, z}
   |
   |                                         where:    => refers to a fresh root capability in the type of value dc
   |
   |                                         Note that capability (y : C^) is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
